--- a/less/mission-page.less
+++ b/less/mission-page.less
@@ -5,7 +5,6 @@
     background-image: url(../img/fezbot2000-smWTOhdPvJc-unsplash.jpg);
     background-size: cover;
     background-position: bottom;
-    background-blend-mode: ;
     align-content: flex-start;
     padding-bottom: 10px;
 
@@ -95,6 +94,10 @@
                 
                 @media @tablet {
                     margin-top: 20px;
+                }
+                @media @phone {
+                    width: 95%;
+                    font-size: 2.6rem;
                 }
 
                 &:hover {
