--- a/less/navigation.less
+++ b/less/navigation.less
@@ -17,9 +17,14 @@ nav {
         margin-right: 40px;
 
         @media @tablet {
+            flex-basis: 15%;
             &:nth-child(2) {
                 margin-left: 3%;
             }
+        }
+
+        @media @phone {
+            flex-basis: 24%;
         }
     }
 
